[package]
name = "hll-rust"
version = "0.1.0"
authors = [
    "Timo Erdelt <ti.erdelt@gmail.com>",
    "Andreas Ellwanger <andreas.ellwanger@campus.lmu.de>",
    "Andreas Griesbeck <andy.griesbeck@gmail.com"]
edition = "2018"

[dependencies]
log = "0.4.6"
log4rs = "0.8.1"
num = "0.2.0"
num-bigint = "0.2.2"
rust-crypto = "0.2.36"
tokio = "0.1.14"
