[package]
name = "hll-rust"
version = "0.1.0"
authors = [
    "Timo Erdelt <ti.erdelt@gmail.com>",
    "Andreas Ellwanger <andreas.ellwanger@campus.lmu.de>",
    "Andreas Griesbeck <andy.griesbeck@gmail.com"]
edition = "2018"

[dependencies]
log = "0.4.6"
log4rs =  {version = "0.8.1", features = ["file"]}
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["serde"]}
rust-crypto = "0.2.36"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.36"
get_if_addrs = "0.5.3"
getopts = "0.2.18"
# check if we even need tokio
tokio = "0.1.14"
futures = "0.1.25"
crossbeam = "0.6.0"