[package]
name = "hll-rust"
version = "0.8.0"
authors = [
    "Timo Erdelt <ti.erdelt@gmail.com>",
    "Andreas Ellwanger <andreas.ellwanger@campus.lmu.de>",
    "Andreas Griesbeck <andy.griesbeck@gmail.com"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
colored = "1.7.0"
futures = "0.1.25"
get_if_addrs = "0.5.3"
getopts = "0.2.18"
log = "0.4.6"
log4rs =  {version = "0.8.1", features = ["file"]}
num = "0.2.0"
num-bigint = {version = "0.2.2", features = ["serde"]}
prettytable-rs = "0.8.0"
rust-crypto = "0.2.36"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
tokio = "0.1.15"
